# speak-mcp

./: .gitignore  Cargo.toml  HowTo.md  README.md  install.sh
setup/: setup_aivisspeech.sh  setup_voicevox.sh
speak-config/: Cargo.toml  package_app.sh
speak-config/SpeakConfig.app/Contents/: Info.plist
speak-config/SpeakConfig.app/Contents/Resources/: AppIcon.icns
speak-config/src/: main.rs
speak-config/ui/: app.slint
src/: main.rs
