[package]
name = "speak-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-mcp = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
async-trait = "0.1"
anyhow = "1.0.100"
dirs = "6.0.0"
