[package]
name = "speak-config"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "6.0.0"

[build-dependencies]
slint-build = "1.8.0"
